# lipstick-sde

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  lipstickglobal.h  logging.cpp  logging.h
src/compositor/: lipstickcompositor.cpp  lipstickcompositor.h
src/devicestate/: devicestate.cpp  devicestate_p.h  displaystate.cpp  displaystate_p.h
src/notifications/: batterynotifier.cpp  batterynotifier.h  notificationpreviewpresenter.cpp
src/screenlock/: screenlock.cpp
src/touchscreen/: touchscreen.cpp
src/volume/: volumecontrol.cpp
tests/: CMakeLists.txt  common.pri
tests/ut_categorydefinitionstore/: CMakeLists.txt  ut_categorydefinitionstore.cpp  ut_categorydefinitionstore.h
tests/ut_qobjectlistmodel/: CMakeLists.txt  tst_ut_qobjectlistmodel.cpp
tools/simple-compositor/: simple-compositor.pro
